style(sponsors): fix backers layout on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -60,12 +60,6 @@ img {
   -ms-user-select: none;
 }
 
-iframe,
-object,
-embed {
-  max-width: 100% !important;
-}
-
 .line {
   display: flex;
   align-items: center;
